--- a/src/sass/_example.scss
+++ b/src/sass/_example.scss
@@ -57,42 +57,42 @@
 
 ////////////////////////////loader///////////////////////
 
-.preloader {
-  position: fixed;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  background: #2d2d2e;
-  z-index: 2;
-  transition: 1s all;
-  opacity: 0.5;
-  visibility: visible;
+// .preloader {
+//   position: fixed;
+//   left: 0;
+//   top: 0;
+//   width: 100%;
+//   height: 100%;
+//   background: #2d2d2e;
+//   z-index: 2;
+//   transition: 1s all;
+//   opacity: 0.5;
+//   visibility: visible;
 
-  .loader {
-    width: 75px;
-    height: 75px;
-    border: 10px solid orangered;
-    border-radius: 50%;
-    border-top-color: rgb(180, 180, 180, 0);
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
-    animation: 1s spin infinite linear;
-  }
+//   .loader {
+//     width: 75px;
+//     height: 75px;
+//     border: 10px solid orangered;
+//     border-radius: 50%;
+//     border-top-color: rgb(180, 180, 180, 0);
+//     position: absolute;
+//     left: 50%;
+//     top: 50%;
+//     transform: translate(-50%, -50%);
+//     animation: 1s spin infinite linear;
+//   }
 
-  &.done {
-    opacity: 0;
-    visibility: hidden;
-  }
-}
+//   &.done {
+//     opacity: 0;
+//     visibility: hidden;
+//   }
+// }
 
-@keyframes spin {
-  from {
-    transform: translate(-50%, -50%) rotate(0deg);
-  }
-  to {
-    transform: translate(-50%, -50%) rotate(360deg);
-  }
-}
+// @keyframes spin {
+//   from {
+//     transform: translate(-50%, -50%) rotate(0deg);
+//   }
+//   to {
+//     transform: translate(-50%, -50%) rotate(360deg);
+//   }
+// }
